# JumpshellPs

./: .gitignore  .tmp-run-initial-setup.ps1  .tmp_run_initial_setup.ps1  Applications.ps1  Copilot-Cli.ps1  Custom.Types.ps1xml  Custom.format.ps1xml  DIrectories.ps1  Dotnet.ps1  Drives.ps1  Elevate.ps1  Git.ps1  History.ps1  HomeAssistant.ps1  Html.ps1  Init.ps1  Install.ps1  Install.sh  JumpShell-ModuleUtils.ps1  JumpShellPs.psm1  Jumpshell.psd1  Jumpshell.psm1  Mcp.ps1  Network.ps1  New-Machine.ps1  Pre_0Installers.ps1  Pre_1Globals.ps1  Profile.ps1  ProfileUtils.ps1  README.md  Rsync.ps1  Secrets.ps1  Update.ps1  Utils.ps1  VsCode.ps1  _JumpValues.ps1  activity-bar-state.json  install-details.prompt.md  install.prompt.md  kubernetes.ps1  (+1 more)
Backups/: JumpShellPs.sln  Program.cs  files.csproj
Install/: All-Applications.txt  Install-ApplicationDeps.ps1  Install-HomeAssistantModule.ps1  Install-NewMachine.ps1  Install-PowerShellModules.ps1  Install.ps1  Required-Applications.ps1  Required-Applications.txt
docs/: .gitignore  Gemfile  MCP-Server.md  PowerShell-Module.md  README.md  Repository-Layout.md  VSCode-ChatSessions.md  VSCode-Extension.md  (+4 more)
src/python/ai-backends/: README.md  pyproject.toml
src/python/ai-backends/ai_backends/: .models_cache.json  __init__.py  __main__.py  _api.py  _backend_config.py  _config.py  _core.py  _models.py
src/python/ai-backends/ai_backends.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/python/ai-backends/ai_backends/prompts/: default-model-selection.prompt.md  model-rules-generation.prompt.md
(+177 files in other folders)
